--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -3,13 +3,13 @@
 
     <div class="carousel-inner">
         <div class="carousel-item" data-bs-interval="3000">
-            <img src="assets/img/image-accueil.jpg" class="tailleImageCarousel Carousel styleBasic" alt="...">
+            <img src="assets/img/image-accueil.jpg" alt="...">
         </div>
         <div class="carousel-item active" data-bs-interval="3000">
-            <img src="assets/img/image-accueil3.jpg" class="tailleImageCarousel Carousel styleBasic" alt="...">
+            <img src="assets/img/image-accueil3.jpg" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-            <img src="assets/img/image-accueil2.jpg" class="tailleImageCarousel Carousel styleBasic" alt="...">
+            <img src="assets/img/image-accueil2.jpg" alt="...">
         </div>
     </div>
 
