--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,13 +1,12 @@
-.tailleImageCarousel {
-    width: 97%;
-    height: 750px;
-}
-
-@media screen and (max-width: 700px) {
-    .tailleImageCarousel {
-        width: 100%;
-        height: 450px;
-    }
+#body {
+    margin-top: 50px;
+    min-height: 700px;
+    margin-bottom: 50px;
+    box-shadow: 1px 4px 6px #2c3060;
+    background-color: #00a3cf !important;
+    margin-left: 12rem;
+    border-radius: 4px;
+    padding: 10px;
 }
 
 @media screen and (max-width: 700px) {
@@ -15,30 +14,5 @@
         min-height: 350px;
         /* position: relative;
     right: inherit; */
-    }
-}
-
-
-.carousel {
-    width: 100%;
-}
-
-.carousel.rtl {
-    direction: rtl;
-}
-
-@media all and (transform-3d),
-(-webkit-transform-3d) {
-
-    .carousel.rtl .carousel-inner,
-    .carousel.rtl .carousel-inner {
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-
-    .carousel.rtl .carousel-inner>.item.prev,
-    .carousel.rtl .carousel-inner>.item.active.left {
-        -webkit-transform: translate3d(100%, 0, 0);
-        transform: translate3d(100%, 0, 0);
     }
 }
