--- a/src/app/carrousel/carrousel.component.css
+++ b/src/app/carrousel/carrousel.component.css
@@ -1,20 +1,29 @@
-.tailleImageCarousel {
-    width: 88%;
-    height: 750px;
-    margin-top: 4rem;
-    margin-bottom: 3rem;
-    box-shadow: 1px 4px 6px #2c3060;
-    background-color: #00a3cf !important;
-    /* text-shadow: 1px 4px 6px #2c3060; */
-    margin-left: 12rem;
-    /* margin-right: auto; */
-    /* text-align: center; */
-    border-radius: 4px;
+.carousel {
+    width: 100%;
+    height: 250px;
+    position: relative;
 }
 
-@media screen and (max-width: 700px) {
-    .tailleImageCarousel {
-        width: 100%;
-        height: 450px;
+.carousel-item>img {
+    width: 100%;
+}
+
+.carousel.rtl {
+    direction: rtl;
+}
+
+@media all and (transform-3d),
+(-webkit-transform-3d) {
+
+    .carousel.rtl .carousel-inner,
+    .carousel.rtl .carousel-inner {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    .carousel.rtl .carousel-inner>.item.prev,
+    .carousel.rtl .carousel-inner>.item.active.left {
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
     }
 }
