--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,62 +1,49 @@
 <header class="d-flex align-items-center justify-content-center fixed">
-    <div class="row justify-content-center">
-        <div class="col-md-2">
-            <!-- <img src="assets/img/header2.png" id="header2" alt=""> -->
-            <!-- <img src="assets/img/header3.png" id="header3"  class="mt-4"alt=""> -->
-            <img src="assets/img/logo.png" class="logoDardanSahitaj" alt="">
-        </div>
-
-        <div class="col-md-7 d-none d-md-block">
-            <nav>
-                <ul class="list-group list-group-horizontal d-flex">
-                    <li class="m-1 buttonHeader" onclick="clickSurProjets()" id="mesProjets" alt="Mes projets">
-                        <a href="#" class="text-white">
-                            Programmation
-                            <span></span><span></span><span></span><span></span>
-
-                        </a>
-                    </li>
-                    <li class="m-1 buttonHeader" onclick="clickSurProjets()" id="mesProjets" alt="Mes projets">
-                        <a href="#" class="text-white">
-                            Design
-                            <span></span><span></span><span></span><span></span>
-
-                        </a>
-                    </li>
-                    <li class="m-1 buttonHeader" onclick="clickSurProjets()" id="mesProjets" alt="Mes projets">
-                        <a href="#" class="text-white">
-                            Formation
-                            <span></span><span></span><span></span><span></span>
-                        </a>
-                    </li>
-
-                    <li class="m-1 buttonHeader" onclick="clickSurProjets()" id="mesProjets" alt="Mes projets">
-                        <a href="#" class="text-white">
-                            Projets
-                            <span></span><span></span><span></span><span></span>
-
-                        </a>
-                    </li>
-                    <li class="m-1 buttonHeader" onclick="clickSurCV()" id="CV">
-                        <a href="#" class="text-white">
-                            CV
-                            <span></span><span></span><span></span><span></span>
-                        </a>
-                    </li>
-                    <li class="m-1 buttonHeader" onclick="clickSurAProposDeMoi()" id="aProposDeMoi">
-                        <a href="#" class="text-white">
-                            A propos de moi
-                            <span></span><span></span><span></span><span></span>
-                        </a>
-                    </li>
-                    <li class="m-1 buttonHeader" onclick="clickSurContact()" id="contact">
-                        <a href="#" class="text-white">
-                            Contact
-                            <span></span><span></span><span></span><span></span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="d-flex">
+                    <img src="assets/img/logo.png" class="logoDardanSahitaj" alt="" routerLink="/">
+                    <ul class="list-group list-group-horizontal ">
+                        <li class="buttonHeader" alt="Programmation">
+                            <a routerLink="/programmation">
+                                Programmation
+                                <span></span><span></span><span></span><span></span>
+                            </a>
+                        </li>
+                        <li class="buttonHeader" alt="Graphisme">
+                            <a routerLink="/graphisme">
+                                Graphisme
+                                <span></span><span></span><span></span><span></span>
+                            </a>
+                        </li>
+                        <li class="buttonHeader" alt="Formation">
+                            <a routerLink="/formation">
+                                Formation
+                                <span></span><span></span><span></span><span></span>
+                            </a>
+                        </li>
+                        <li class="buttonHeader" alt="Marketing">
+                            <a routerLink="/marketing">
+                                Marketing
+                                <span></span><span></span><span></span><span></span>
+                            </a>
+                        </li>
+                        <li class="buttonHeader" alt="A propos de moi">
+                            <a routerLink="/a-propos-de-moi">
+                                A propos de moi
+                                <span></span><span></span><span></span><span></span>
+                            </a>
+                        </li>
+                        <li class="buttonHeader" alt="Me contacter">
+                            <a routerLink="/contact">
+                                Contact
+                                <span></span><span></span><span></span><span></span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </div>
 </header>
