page programmation + add icons

--- a/src/app/pages/programmation/programmation.component.html
+++ b/src/app/pages/programmation/programmation.component.html
@@ -1,1 +1,41 @@
-<p>programmation works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            WEB
+        </div>
+        <div class="col">
+            Mobile
+        </div>
+        <div class="col">
+            Application
+        </div>
+    </div>
+    <div class="row d-fex">
+        <img src="../../../assets/img/icon/dev/HTML5_logo.png" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+    <div class="row">
+        <img src="../../../assets/img/icon/dev/CSS3_logo.svg" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+    <div class="row">
+        <img src="../../../assets/img/icon/dev/JS_logo.webp" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+    <div class="row">
+        <img src="../../../assets/img/icon/dev/PHP_logo.svg" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+    <div class="row">
+        <img src="../../../assets/img/icon/dev/MYSQL_logo.png" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+    <div class="row">
+        <img src="../../../assets/img/icon/dev/MariaDB_logo.png" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+    <div class="row">
+        <img src="../../../assets/img/icon/dev/WAMP_logo.png" class="imgDev" alt="">
+        <div class="barre_progression">100%</div>
+    </div>
+</div>
