programmation - nettoyager BarAnswer

--- a/src/app/pages/programmation/programmation.component.html
+++ b/src/app/pages/programmation/programmation.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row d-fex">
         <img src="../../../assets/img/icon/dev/HTML5_logo.png" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
+        <div class="barre_progression">{{progressBar.html}}</div>
     </div>
     <div class="row">
         <img src="../../../assets/img/icon/dev/CSS3_logo.svg" class="imgDev" alt="">
@@ -36,6 +36,7 @@
     </div>
     <div class="row">
         <img src="../../../assets/img/icon/dev/WAMP_logo.png" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
+        <div class="barre_progression" #testBar>100%</div>
     </div>
+    <div class="row">{{progressBar.test}}</div>
 </div>
