--- a/src/app/bar-answer/bar-answer.component.html
+++ b/src/app/bar-answer/bar-answer.component.html
@@ -5,7 +5,7 @@
             <div class="col-5">
                 <input type="text" id="boiteDeDialogueEnvoi" #box (keyup)="onEnter(box.value)" class="question-button"
                     placeholder="Une question?">
-                <button type="button" id="boutonEnvoieBoiteDeDialogue" class="send-button" (click)=answerDude()>
+                <button type="button" id="boutonEnvoieBoiteDeDialogue" class="send-button">
                     Envoyer
                 </button>
             </div>
