--- a/src/app/menu-left/menu-left.component.html
+++ b/src/app/menu-left/menu-left.component.html
@@ -1,8 +1,10 @@
-<div id="dashboard">
+<!-- <div id="dashboard">
 
     <div id="dudeBoxed" class="d-flex flex-column">
         <img [src]="petitCroix" id="petitCroixDude" alt="">
-        <app-dude></app-dude>
+     
     </div>
 
-</div>
+</div> -->
+
+<app-dude></app-dude>
