--- a/src/app/pages/programmation/programmation.component.html
+++ b/src/app/pages/programmation/programmation.component.html
@@ -1,42 +1,57 @@
 <div class="container">
     <div class="row">
-        <div class="col">
-            WEB
+        <div class="col-2">
+            Front End
         </div>
-        <div class="col">
-            Mobile
+        <div class="col-2">
+            Back End
         </div>
-        <div class="col">
-            Application
+        <div class="col-2">
+            Server
+        </div>
+        <div class="col-2">
+            Databases
+        </div>
+        <div class="col-2">
+            DevOps
+        </div>
+        <div class="col-2">
+            Mobile App
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2">
+            <img src="../../../assets/img/icon/dev/HTML5_logo.png" class="imgDev" alt="HTML">
+            <img src="../../../assets/img/icon/dev/CSS3_logo.svg" class="imgDev" alt="CSS">
+            <img src="../../../assets/img/icon/dev/JS_logo.webp" class="imgDev" alt="Javascript">
+            <img src="../../../assets/img/icon/dev/Angular_logo.png" class="imgDev" alt="Angular">
+            <img src="../../../assets/img/icon/dev/Typescript_logo_2020.svg.png" class="imgDev" alt="TypeScript">
+        </div>
+        <div class="col-2">
+            <img src="../../../assets/img/icon/dev/PHP_logo.svg" class="imgDev" alt="">
+            <img src="../../../assets/img/icon/dev/Python_logo.svg" class="imgDev" alt="">
+        </div>
+        <div class="col-2">
+            <img src="../../../assets/img/icon/dev/WAMP_logo.png" class="imgDev" alt="">
+        </div>
+        <div class="col-2">
+            <img src="../../../assets/img/icon/dev/MYSQL_logo.png" class="imgDev" alt="">
+            <img src="../../../assets/img/icon/dev/MariaDB_logo.png" class="imgDev" alt="">
+        </div>
+        <div class="col-2">
+            DevOps
+        </div>
+        <div class="col-2">
+            Mobile App
         </div>
     </div>
     <div class="row d-fex">
-        <img src="../../../assets/img/icon/dev/HTML5_logo.png" class="imgDev" alt="">
-        <div class="barre_progression">{{progressBar.html}}</div>
+
+
+
+
+
+
+
     </div>
-    <div class="row">
-        <img src="../../../assets/img/icon/dev/CSS3_logo.svg" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
-    </div>
-    <div class="row">
-        <img src="../../../assets/img/icon/dev/JS_logo.webp" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
-    </div>
-    <div class="row">
-        <img src="../../../assets/img/icon/dev/PHP_logo.svg" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
-    </div>
-    <div class="row">
-        <img src="../../../assets/img/icon/dev/MYSQL_logo.png" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
-    </div>
-    <div class="row">
-        <img src="../../../assets/img/icon/dev/MariaDB_logo.png" class="imgDev" alt="">
-        <div class="barre_progression">100%</div>
-    </div>
-    <div class="row">
-        <img src="../../../assets/img/icon/dev/WAMP_logo.png" class="imgDev" alt="">
-        <div class="barre_progression" #testBar>100%</div>
-    </div>
-    <div class="row">{{progressBar.test}}</div>
-</div>
