--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,36 +7,42 @@
                     <ul class="list-group list-group-horizontal ">
                         <li class="buttonHeader" alt="Programmation">
                             <a routerLink="/programmation">
+                                <img src="../../assets/img/icon/menu/binary-code.png" alt="" srcset="">
                                 Programmation
                                 <span></span><span></span><span></span><span></span>
                             </a>
                         </li>
                         <li class="buttonHeader" alt="Graphisme">
                             <a routerLink="/graphisme">
+                                <img src="../../assets/img/icon/menu/graphic-tablet.png" alt="" srcset="">
                                 Graphisme
                                 <span></span><span></span><span></span><span></span>
                             </a>
                         </li>
                         <li class="buttonHeader" alt="Formation">
                             <a routerLink="/formation">
+                                <img src="../../assets/img/icon/menu/male.png" alt="" srcset="">
                                 Formation
                                 <span></span><span></span><span></span><span></span>
                             </a>
                         </li>
                         <li class="buttonHeader" alt="Marketing">
                             <a routerLink="/marketing">
+                                <img src="../../assets/img/icon/menu/bullhorn.png" alt="" srcset="">
                                 Marketing
                                 <span></span><span></span><span></span><span></span>
                             </a>
                         </li>
                         <li class="buttonHeader" alt="A propos de moi">
                             <a routerLink="/a-propos-de-moi">
+                                <img src="../../assets/img/icon/menu/information.png" alt="" srcset="">
                                 A propos de moi
                                 <span></span><span></span><span></span><span></span>
                             </a>
                         </li>
                         <li class="buttonHeader" alt="Me contacter">
                             <a routerLink="/contact">
+                                <img src="../../assets/img/icon/menu/contact.png" alt="">
                                 Contact
                                 <span></span><span></span><span></span><span></span>
                             </a>
