--- a/src/app/bar-answer/bar-answer.component.html
+++ b/src/app/bar-answer/bar-answer.component.html
@@ -1,7 +1,7 @@
 <div class="bar-answer">
     <div class="container">
         <div class="row">
-            <div class="col-7">{{answerBar.server.reponseValue}}</div>
+            <div class="col-7 d-flex align-items-center justify-content-center">{{answerBar.server.reponseValue}}</div>
             <div class="col-5">
                 <input type="text" id="boiteDeDialogueEnvoi" #box (keyup)="onEnter(box.value)" class="question-button"
                     placeholder="Une question?">
