--- a/src/app/bar-answer/bar-answer.component.css
+++ b/src/app/bar-answer/bar-answer.component.css
@@ -12,6 +12,9 @@
     margin-right: auto;
     text-align: center;
     border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 101;
 }
 
