--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
-    <div class="rowr">
-        <div class="col-12">
+    <div class="row">
+        <div class="col-12 d-flex justify-content-center align-items-center text-center">
             <p>Copyright &copy;
                 <script>document.write(new Date().getFullYear())</script> Dardan Sahitaj - All Rights Reserved
             </p>
