--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -75,6 +75,7 @@ nav ul li a {
     text-align: center;
     font-size: 1rem !important;
     color: white;
+    text-decoration: none;
 }
 
 nav ul li a:hover {
