--- a/src/app/pages/a-propos-de-moi/a-propos-de-moi.component.html
+++ b/src/app/pages/a-propos-de-moi/a-propos-de-moi.component.html
@@ -1,1 +1,87 @@
-<p>a-propos-de-moi works!</p>
+<p>
+    Après avoir travaillé pendant sept ans dans l’Horeca, <br>
+    <br>
+    j’ai souhaité effectuer une reconversion professionnelle
+    dans un domaine qui me passionne : <br>
+    l’informatique en général et plus particulièrement la programmation<br>
+    J’ai achevé une formation professionnelle au centre de formation FIJ à Saint-Gilles.
+</p>
+
+<p>
+    Pendant ces 18 mois de formation à 360°, je me suis formé aux outils et aux techniques du web et de la <br>
+    programmation, et j’ai déjà eu l’occasion de mettre en pratique mes acquis théoriques lors d’un premier stage de 6
+    semaines chez<br>
+    PulpSystems.<br>
+    <br>
+    J’ai créé de sites web en partant de zéro avec mon propre Template tel que :
+</p>
+<ul>
+    <li>
+        www.belart.org
+    </li>
+    <li>
+        www.abva.be.
+    </li>
+    <li>
+        www.allinbruxells.be
+    </li>
+</ul>
+<p>
+    Lors de mon deuxième stage de 12 semaines chez Cownected j’ai travaillé en collaboration avec le directeur
+    d’entreprise pour la réalisation d’applications web et mobile par exemple l’application mobile des assurances AG
+    en Angular/Ionic. <br>
+    <br>
+    Je me suis amélioré dans la migration des sites simples ou des multisites en WordPress en ligne de commandes.<br>
+</p>
+<p>
+    Autodidacte et déterminé, j’ai également créé mon propre site web :<br>
+    <br>
+    J’aime également le hardware, je sais facilement changer les composants d’un ordinateur. Je suis également capable
+    de comprendre la partie infrastructure IT. <br>
+    <br>
+    Je peux vous garantir que je maîtrise les domaines suivants : <br>
+
+</p>
+<ul>
+    <li>
+        HTML5
+    </li>
+    <li>
+        CSS
+    </li>
+    <li>Responsive Design</li>
+    <li>
+        PHP
+    </li>
+    <li>
+        MySQL
+    </li>
+    <li>
+        MariaDB
+    </li>
+    <li>
+        Javascript
+    </li>
+    <li>
+        Jquery
+    </li>
+    <li>
+        WordPress
+    </li>
+    <li>Angular</li>
+
+</ul>
+<p>
+    De plus, lors de mes années dans l’Horeca, j’ai confirmé mes compétences sociales :
+</p>
+<ul>
+    <li>
+        relation client
+    </li>
+    <li>
+        empathie
+    </li>
+    <li>
+        sens du service
+    </li>
+</ul>
