--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="mb-4">
+<section class="mb-4 p-1">
 
     <h2 class="h1-responsive font-weight-bold text-center my-4">Contacter-moi</h2>
 
@@ -13,15 +13,15 @@
 
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" id="name" name="name" class="form-control">
-                                <label for="name" class="">Votre prénom</label>
+                                <input type="text" id="name" name="name" class="form-control m-3"
+                                    placeholder="Votré prénom">
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" id="email" name="email" class="form-control">
-                                <label for="email" class="">Votre adresse mail</label>
+                                <input type="text" id="email" name="email" class="form-control m-3"
+                                    placeholder="Votre adresse mail">
                             </div>
                         </div>
 
@@ -30,8 +30,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="md-form mb-0">
-                                <input type="text" id="subject" name="subject" class="form-control">
-                                <label for="subject" class="">objet</label>
+                                <input type="text" id="subject" name="subject" class="form-control m-3"
+                                    placeholder=" objet">
                             </div>
                         </div>
                     </div>
@@ -41,9 +41,8 @@
                         <div class="col-md-12">
 
                             <div class="md-form">
-                                <textarea type="text" id="message" name="message" rows="2"
-                                    class="form-control md-textarea"></textarea>
-                                <label for="message">Votre message</label>
+                                <textarea type="text" id="message" name="message" rows="9"
+                                    class="form-control md-textarea m-3" placeholder="Votre messsage"></textarea>
                             </div>
 
                         </div>
@@ -58,7 +57,7 @@
             </div>
 
             <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0">
+                <ul class="list-unstyled">
                     <li><i class="fas fa-map-marker-alt fa-2x"></i>
                         <p>Rue Alfred Orban 14</p>
                         <p>1190 - Forest</p>
@@ -69,7 +68,7 @@
                     </li>
 
                     <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>dardansahitaj@outlook.be</p>
+                        <p>info@dardansahitaj.be</p>
                     </li>
                 </ul>
             </div>
