--- a/src/app/pages/graphisme/graphisme.component.html
+++ b/src/app/pages/graphisme/graphisme.component.html
@@ -1,1 +1,8 @@
-<p>graphisme works!</p>
+<!-- <button (click)="addImage()">Add image</button> -->
+<div>
+    <lightgallery [settings]="settings" [onInit]="onInit">
+        <a *ngFor="let item of items" [attr.data-lg-size]="item.size" className="gallery-item" [attr.href]="item.src">
+            <img className="img-responsive" src="{{ item.thumb }}" />
+        </a>
+    </lightgallery>
+</div>
