--- a/src/app/pages/programmation/programmation.component.css
+++ b/src/app/pages/programmation/programmation.component.css
@@ -8,12 +8,11 @@
     float: left;
 }
 
-.barre_progression {
-    height: 50px;
-    background: blue;
-    border: 1px solid white;
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.progress {
+    margin-top: 30px;
+}
+
+.progress-bar {
+    background-color: #2c3060 !important;
+    margin-top: 7px;
 }
