--- a/src/app/pages/programmation/programmation.component.html
+++ b/src/app/pages/programmation/programmation.component.html
@@ -2,6 +2,7 @@
     <div class="row mt-5">
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/HTML5_logo.png" class="imgDev" alt="HTML">
+            <a href={{this.progressBar.programming.urlProjects.html}}>Voir</a>
         </div>
         <div class="col-11">
             <div class="progress">
