--- a/src/app/bar-answer/bar-answer.component.css
+++ b/src/app/bar-answer/bar-answer.component.css
@@ -27,6 +27,11 @@
     color: white !important
 }
 
+.question-button:hover {
+    animation: gelatine 0.5s infinite;
+    ;
+}
+
 .send-button {
     border-radius: 4px;
     border: 1px solid;
@@ -35,4 +40,8 @@
     padding: 0.75rem;
     color: white !important;
     width: 110px;
+}
+
+.send-button:hover {
+    animation: gelatine 0.5s infinite;
 }
