--- a/src/app/components/bar-progression/bar-progression.component.css
+++ b/src/app/components/bar-progression/bar-progression.component.css
@@ -1,18 +1,8 @@
-.example-h2 {
-    margin: 10px;
+.progress {
+    margin-top: 30px;
 }
 
-.example-section {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    height: 60px;
-}
-
-.example-margin {
-    margin: 0 10px;
-}
-
-.example-card {
-    margin-bottom: 10px;
+.progress-bar {
+    background-color: #2c3060 !important;
+    margin-top: 7px;
 }
