--- a/src/app/dude/dude.component.html
+++ b/src/app/dude/dude.component.html
@@ -1,4 +1,4 @@
-<img [src]="dude.dudeUrl" id="dude" (click)=clickOnDude() class="dude">
+<img [src]="dude.dudeUrl" id="dude" (click)=clickOnDude() class="dude hithere">
 
 <!-- [ngClass]="{
 'dude' : this.dude.positionDude === true,
