--- a/src/app/pages/programmation/programmation.component.html
+++ b/src/app/pages/programmation/programmation.component.html
@@ -1,31 +1,41 @@
 <div class="container">
-    <div class="row mt-5">
+    <div class="row p-3">
+        <div class="col-12">
+            <h1>{{title}}</h1>
+        </div>
+
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/HTML5_logo.png" class="imgDev" alt="HTML">
-            <a href={{this.progressBar.programming.urlProjects.html}}>Voir</a>
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.html}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.html}}</div>
             </div>
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
 
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/CSS3_logo.svg" class="imgDev" alt="CSS">
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.css}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.css}}</div>
             </div>
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
+
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/JS_logo.webp" class="imgDev" alt="Javascript">
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.javascript}" aria-valuenow="75"
@@ -33,88 +43,110 @@
                 </div>
             </div>
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
+
+
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/Angular_logo.png" class="imgDev" alt="Angular">
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.php}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.php}}</div>
             </div>
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
+
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/Typescript_logo_2020.svg.png" class="imgDev" alt="TypeScript">
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.typescript}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.typescript}}
                 </div>
             </div>
-
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
+
+
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/PHP_logo.svg" class="imgDev" alt="PHP">
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.php}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.php}}</div>
             </div>
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
 
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/Python_logo.svg" class="imgDev" alt="Python">
         </div>
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.python}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.python}}</div>
             </div>
-
         </div>
-
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
 
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/WAMP_logo.png" class="imgDev" alt="Wamp">
         </div>
-
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.wamp}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.wamp}}</div>
             </div>
         </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
+
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/MYSQL_logo.png" class="imgDev" alt="Mysql">
         </div>
-
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.mysql}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.mysql}}</div>
             </div>
         </div>
-
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
 
         <div class="col-1">
             <img src="../../../assets/img/icon/dev/MariaDB_logo.png" class="imgDev" alt="Maria Db">
         </div>
-
-        <div class="col-11">
+        <div class="col-10">
             <div class="progress">
                 <div class="progress-bar" role="progressbar"
                     [ngStyle]="{'width': this.progressBar.programming.capacity.mariadb}" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100">{{this.progressBar.programming.capacity.mariadb}}</div>
             </div>
         </div>
-
+        <div class="col-1 d-flex justify-content-center align-items-center">
+            <button class="button" routerLink={{this.progressBar.programming.urlProjects.html}}>Voir</button>
+        </div>
 
 
 
