--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -5,8 +5,8 @@
     background-color: #00a3cf !important;
     margin-left: 12rem;
     margin-top: 50px;
+    border: 1px solid #2c3060;
     border-radius: 4px;
-
 }
 
 @media screen and (max-width: 700px) {
