--- a/src/app/pages/graphisme/graphisme.component.html
+++ b/src/app/pages/graphisme/graphisme.component.html
@@ -1,8 +1,10 @@
 <!-- <button (click)="addImage()">Add image</button> -->
 <div>
-    <lightgallery [settings]="settings" [onInit]="onInit">
+    <h2>Photos</h2>
+    <lightgallery [settings]="settings" [onInit]="onInit"
+        class="d-flex justify-content-center align-items-center flex-wrap">
         <a *ngFor="let item of items" [attr.data-lg-size]="item.size" className="gallery-item" [attr.href]="item.src">
-            <img className="img-responsive" src="{{ item.thumb }}" />
+            <img class="img-responsive" className="img-responsive" src="{{ item.thumb }}" />
         </a>
     </lightgallery>
 </div>
