--- a/src/app/pages/marketing/marketing.component.html
+++ b/src/app/pages/marketing/marketing.component.html
@@ -1,1 +1,24 @@
-<p>marketing works!</p>
+<h2>Votre évolution commence ici!</h2>
+<p>
+    je suis là pour vous accompagner dans votre projet. Laissez votre marketing
+    digital entre les mains d'un experts. De la création à l’optimisation du référencement de votre site web, de
+    l’expansion de votre visibilité sur les réseaux sociaux jusqu’au design et à l’impression de vos cartes de visites,
+    je m'occupe de tout.
+</p>
+<h2>Digitaliser votre entreprise</h2>
+<p>
+    Dans une société de plus en plus numérisée, la digitalisation de votre entreprise devient un enjeu majeur pour
+    répondre aux besoins de vos clients. je vous accompagne et construit avec vous votre projet marketing. Pour
+    répondre
+    à vos exigences, à construire votre vision et à réaliser vos objectifs.
+</p>
+
+<h2>De la création à la production</h2>
+<p>
+    N’aillez aucune hésitation à me faire part de votre projet.
+    Je me ferai un plaisir d’élaborer en détail et à construire avec vous votre projet de A à Z!
+    Une idée atypique et exceptionnel?
+    Rien n’est impossible!
+    Je suis impatient de vous écouter!
+    Faites-nous en part au plus vite et je vous détaillerai une offre marketing sur-mesure!
+</p>
