--- a/src/app/bar-answer/bar-answer.component.css
+++ b/src/app/bar-answer/bar-answer.component.css
@@ -1,23 +1,19 @@
 .bar-answer {
-    width: 80%;
+    width: 83%;
     height: 50px;
-    position: absolute;
-    top: 98px;
-    left: 10%;
     color: white;
-    box-shadow: 1px 4px 6px #2c3060;
-    background-color: #00a3cf !important;
     text-shadow: 1px 4px 6px #2c3060;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    border: 2px solid #2c3060;
-    border-radius: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 101;
-
+    box-shadow: 1px 4px 6px #2c3060;
+    background-color: #00a3cf !important;
+    border: 1px solid #2c3060;
 }
 
 .question-button {
@@ -25,7 +21,7 @@
     border: 1px solid;
     background-color: #0000007a;
     box-shadow: 1px 4px 6px #ffffff;
-    padding: 0.75rem;
+    padding: 7px;
     color: white !important
 }
 
@@ -38,7 +34,7 @@
     border: 1px solid;
     background-color: #0000007a;
     box-shadow: 1px 4px 6px #ffffff;
-    padding: 0.75rem;
+    padding: 7px;
     color: white !important;
     width: 110px;
 }
