--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,12 +1,9 @@
 #body {
-    min-height: 500px;
-    margin-bottom: 50px;
+    margin-top: 10px;
     box-shadow: 1px 4px 6px #2c3060;
     background-color: #00a3cf !important;
-    margin-left: 12rem;
-    margin-top: 50px;
     border: 1px solid #2c3060;
-    border-radius: 4px;
+    position: relative;
 }
 
 @media screen and (max-width: 700px) {
