--- a/src/app/carrousel/carrousel.component.css
+++ b/src/app/carrousel/carrousel.component.css
@@ -1,7 +1,12 @@
 .carousel {
     width: 100%;
-    height: 250px;
+    height: 2 50px;
+}
+
+.carousel-inner {
     position: relative;
+    width: 100%;
+    overflow: inherit;
 }
 
 .carousel-item>img {
