--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,19 +1,17 @@
 footer {
-    width: 80%;
-    height: 2rem;
-    bottom: 0;
+    width: 83%;
+    height: 31px;
     padding-top: 20px;
-    margin-bottom: 3rem;
-    box-shadow: 1px 4px 6px #2c3060;
-    background-color: #00a3cf !important;
     color: white;
     font-size: 1.2rem;
     text-shadow: 1px 4px 6px #2c3060;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 4px;
-    z-index: 2000;
+    box-shadow: 1px 4px 6px #2c3060;
+    background-color: #00a3cf !important;
+    border: 1px solid #2c3060;
 }
