--- a/src/app/pages/a-propos-de-moi/a-propos-de-moi.component.css
+++ b/src/app/pages/a-propos-de-moi/a-propos-de-moi.component.css
@@ -10,6 +10,7 @@ p {
 ul {
     margin-left: 50px;
     color: #2c3060;
-    border: 1px solid white;
     background-color: white;
+    box-shadow: 1px 4px 6px #2c3060;
+    border: 1px solid #2c3060;
 }
