--- a/src/app/bar-answer/bar-answer.component.css
+++ b/src/app/bar-answer/bar-answer.component.css
@@ -3,7 +3,6 @@
     height: 50px;
     color: white;
     text-shadow: 1px 4px 6px #2c3060;
-    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -14,6 +13,7 @@
     box-shadow: 1px 4px 6px #2c3060;
     background-color: #00a3cf !important;
     border: 1px solid #2c3060;
+    position: relative;
 }
 
 .question-button {
