--- a/src/app/carrousel/carrousel.component.css
+++ b/src/app/carrousel/carrousel.component.css
@@ -6,7 +6,7 @@
 .carousel-inner {
     position: relative;
     width: 100%;
-    overflow: inherit;
+    overflow: hidden;
 }
 
 .carousel-item>img {
