--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,9 +3,15 @@ header {
     height: 25px;
     box-shadow: 1px 4px 6px #00a3cf;
     z-index: 1000;
-    margin-top: 1.2rem;
     animation: barre_progression 5s;
     -webkit-animation: barre_progression 5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: auto;
+    position: sticky;
+    margin-bottom: 100px;
+    margin-top: 1.2rem;
 }
 
 
@@ -22,7 +28,6 @@ header {
 }
 
 nav ul {
-
     list-style-type: none;
     padding: 0;
 }
