--- a/src/app/pages/graphisme/graphisme.component.html
+++ b/src/app/pages/graphisme/graphisme.component.html
@@ -1,12 +1,18 @@
 <!-- <button (click)="addImage()">Add image</button> -->
 <div>
-    <button class="button">Adobe Illustrator</button>
-    <button class="button">Adobe Photoshop</button>
+    <div class="buttons d-flex justify-content-center align-items-center">
+        <button class="button d-flex justify-content-center align-items-center">Adobe Illustrator</button>
+        <button class="button d-flex justify-content-center align-items-center">Adobe Photoshop</button>
+    </div>
+
+
 
     <lightgallery [settings]="settings" [onInit]="onInit"
         class="d-flex justify-content-center align-items-center flex-wrap">
         <a *ngFor="let item of items" [attr.data-lg-size]="item.size" className="gallery-item" [attr.href]="item.src">
-            <img class="img-responsive" className="img-responsive" src="{{ item.thumb }}" />
+            <div class="border-image-gallery">
+                <img class="img-responsive" className="img-responsive" src="{{ item.thumb }}" />
+            </div>
         </a>
     </lightgallery>
 </div>
