--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -11,7 +11,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 1px 4px 6px #2c3060;
-    background-color: #00a3cf !important;
-    border: 1px solid #2c3060;
+    background-color: #2c3060;
+    box-shadow: 1px 4px 6px #00a3cf;
 }
