--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <nav class="d-flex">
+                <nav class="d-flex justify-content-center align-items-center">
                     <img src="assets/img/logo.png" class="logoDardanSahitaj" alt="" routerLink="/">
                     <ul class="list-group list-group-horizontal ">
                         <li class="buttonHeader" alt="Programmation">
